[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
logic = { path = "../../logic" }
tokio = { version = "1", features = ["full"] }
axum = "0.8.0-alpha.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
